tests/cases/fail/string_slice_non_str.p4
def main() -> None:
    xs = [1, 2, 3]
    print(xs[0:2])
